manage-orders/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: manage-orders-deployment
  namespace: manage-orders
  labels:
    app: manage-orders
spec:
  replicas: 1
  selector:
    matchLabels:
      app: manage-orders
  template:
    metadata:
      labels:
        app: manage-orders
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: "/actuator/prometheus"
    spec:
      containers:
      - name: manage-orders
        image: docker.io/antoniobasileo/manage-orders-app:latest
        ports:
          - containerPort: 8080
            protocol: TCP
        volumeMounts:
          - name: manage-orders-config
            mountPath: config/
        resources:
          limits:
            memory: "512Mi"
            cpu: "1000m"
          requests:
            memory: "256Mi"
            cpu: "500m"
      volumes:
        - name: manage-orders-config
          configMap:
            name: manage-orders-config
