manage-orders/load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: manage-orders-service
  namespace: manage-orders
spec:
  type: LoadBalancer
  selector:
    app: manage-orders
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: http
